force-app/main/default/objects/DestinationOrg__c/DestinationOrg__c.object-meta.xml
<CustomObject>
    <label>Destination Org</label>
    <nameField>
        <label>Destination Org  Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destination Orgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>