force-app/main/default/objects/DestinationOrg__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Destination Orgs</relationshipLabel>
    <relationshipName>Destination_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>