force-app/main/default/objects/DestinationOrg__c/fields/Org_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_Name__c</fullName>
    <label>Org Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>