force-app/main/default/objects/DestinationOrg__c/fields/OrgType__c.field-meta.xml
<CustomField>
    <fullName>OrgType__c</fullName>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>