force-app/main/default/objects/DestinationOrg__c/fields/OrgUrl__c.field-meta.xml
<CustomField>
    <fullName>OrgUrl__c</fullName>
    <label>Org Url</label>
    <type>Url</type>
</CustomField>