force-app/main/default/objects/DestinationOrg__c/fields/Remote_Site_Created__c.field-meta.xml
<CustomField>
    <fullName>Remote_Site_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remote Site Created</label>
    <type>Checkbox</type>
</CustomField>