force-app/main/default/objects/DestinationOrg__c/fields/TokenExpiryTime__c.field-meta.xml
<CustomField>
    <fullName>TokenExpiryTime__c</fullName>
    <label>Token Expiry Time</label>
    <type>DateTime</type>
</CustomField>